package edu.hitsz.AircraftFactory;

import edu.hitsz.aircraft.AbstractAircraft;

public interface AircraftFactory {
    public abstract AbstractAircraft createAircraft();
}
