@startuml
'https://plantuml.com/class-diagram

interface AircraftFactory{
    + createAircraft();
}

class EliteAircraftFactory{
    + createAircraft();
}

class MobEnemyFactory{
    + createAircraft();
}

AircraftFactory <|.. EliteAircraftFactory
AircraftFactory <|.. MobEnemyFactory



abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + increaseHp(int increase):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}
AbstractAircraft <|-- MobEnemy


class EliteAircraft{
    - shootNum:int
    - power:int
    - direction:int
    + EliteAircraft(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
    + shoot():List<BaseBullet>
}
AbstractAircraft <|-- EliteAircraft

MobEnemyFactory --> MobEnemy
EliteAircraftFactory --> EliteAircraft


@enduml